--- a/inventarios/staticfiles/templates/html/assets/css/backend.css
+++ b/inventarios/staticfiles/templates/html/assets/css/backend.css
@@ -7077,7 +7077,7 @@ a.text-light-gray:hover, a.text-light-gray:focus {
   top: 0;
   width: 260px;
   height: 100%;
-  background: #ffffff;
+  background: #0c1e23;
   -webkit-transition: all 0.6s ease-in-out;
   -moz-transition: all 0.6s ease-in-out;
   -ms-transition: all 0.6s ease-in-out;
@@ -15620,7 +15620,7 @@ fieldset[disabled] .btn {
   z-index: 999999; }
 
 #loading-center {
-  background: url(../images/loader.gif) no-repeat scroll center center;
+  background: url(../images/logoanimadoottsa.gif) no-repeat scroll center center;
   background-size: 20%;
   width: 100%;
   height: 100%;
@@ -16892,7 +16892,7 @@ fieldset[disabled] .btn {
   z-index: 999999; }
 
 #loading-center {
-  background: url(../images/loader.gif) no-repeat scroll center center;
+  background: url(../images/logoanimadoottsa.gif) no-repeat scroll center center;
   background-size: 20%;
   width: 100%;
   height: 100%;
