--- a/inventarios/inventarios/staticfiles/templates/html/app/add-proveedor.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-proveedor.html
@@ -1,6 +1,6 @@
 {% extends "./todo.html" %}
 {%load static%}
-{% block body %}
+{% block body %} 
 
 <div class="col-sm-12">
     <div class="card">
@@ -106,7 +106,7 @@
                 <div class="modal-body-aviso" style="text-align: center;">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
