--- a/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
@@ -84,7 +84,7 @@
             <div class="modal-body-aviso" style="text-align: center;">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
