--- a/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
@@ -86,7 +86,7 @@
             <div class="modal-body-aviso" style="text-align: center;">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
@@ -124,7 +124,8 @@
         const row = event.target.closest('tr');
 
         // Suponiendo que el botón tiene un atributo 'data-id' que contiene el ID del usuario
-        const userId = event.target.getAttribute('data-id');
+        const buttonElement = event.target.closest('.delete-button');
+        const userId = buttonElement.getAttribute('data-id');
         
         console.log("Botón activo")
         deleteUser(userId, row);
