--- a/inventarios/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/todo.html
@@ -841,18 +841,21 @@
                                   <div class="iq-sub-dropdown dropdown-menu" aria-labelledby="dropdownMenuButton">
                                       <div class="card shadow-none m-0">
                                           <div class="card-body p-0 text-center">
-                                              <div class="media-body profile-detail text-center">
+                                              <!-- <div class="media-body profile-detail text-center">
                                                   <img src="{% static '/assets/images/page-img/profile-bg.jpg' %}" alt="profile-bg"
                                                       class="rounded-top img-fluid mb-4">
                                                   <img src="{% static '/assets/images/user/1.png' %}" alt="profile-img"
                                                       class="rounded profile-img img-fluid avatar-70">
-                                              </div>
+                                              </div> -->
                                               <div class="p-3">
-                                                  <h5 class="mb-1">JoanDuo@property.com</h5>
-                                                  <p class="mb-0">Since 10 march, 2020</p>
+                                                <h5 class="mb-1">
+                                                    {% if user.is_authenticated %}
+                                                    <p>Email: {{ user.username }}</p>
+                                                    {% else %}
+                                                    <p>Por favor, inicie sesión para ver su correo electrónico.</p>
+                                                    {% endif %}</h5>
                                                   <div class="d-flex align-items-center justify-content-center mt-3">
-                                                      <a href="{% static '/app/user-profile.html' %}" class="btn border mr-2">Profile</a>
-                                                      <a href="auth-sign-in.html" class="btn border">Sign Out</a>
+                                                    <a href="{% url 'logout' %}"><button type="button" class="mt-2 btn btn-danger">Logout</button></a>
                                                   </div>
                                               </div>
                                           </div>
