--- a/inventarios/staticfiles/templates/html/app/auth-sign-in.html
+++ b/inventarios/staticfiles/templates/html/app/auth-sign-in.html
@@ -36,35 +36,25 @@
                               <div class="p-3">
                                  <h2 class="mb-2">Iniciar Sesión</h2>
                                  <p>Inicie Sesión en Ottsa Inventarios</p>
-                                 <form id="login-form">
+                                 <form name="login-form" method="post" action="{% url 'login' %}">
+                                    {% csrf_token %}
                                     <div class="row">
                                        <div class="col-lg-12">
                                           <div class="floating-label form-group">
-                                             <input class="floating-input form-control" type="email" placeholder=" " id="username">
+                                             <input class="floating-input form-control" type="email" placeholder=" " name="username">
                                              <label>Email</label>
                                           </div>
                                        </div>
                                        <div class="col-lg-12">
                                           <div class="floating-label form-group">
-                                             <input class="floating-input form-control" type="password" placeholder=" " id="password">
+                                             <input class="floating-input form-control" type="password" placeholder=" " name="password">
                                              <label>Password</label>
                                           </div>
                                        </div>
-                                       <!-- <div class="col-lg-6">
-                                          <div class="custom-control custom-checkbox mb-3">
-                                             <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                             <label class="custom-control-label control-label-1" for="customCheck1">Recuérdame</label>
-                                          </div>
-                                       </div> -->
-                                       <!-- <div class="col-lg-6">
-                                          <a href="auth-recoverpw.html" class="text-primary float-right">Forgot Password?</a>
-                                       </div> -->
                                     </div>
                                     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-                                    <!-- <p class="mt-3">
-                                       Create an Account <a href="auth-sign-up.html" class="text-primary">Sign Up</a>
-                                    </p> -->
-                                 </form>
+                                </form>
+                                
                                  <div id="message"></div>
                               </div>
                            </div>
@@ -95,7 +85,7 @@
     <script src="{% static '/assets/js/appdfront.js' %}"></script>
   </body>
 
-<script>
+<!-- <script>
    document.getElementById('login-form').addEventListener('submit', function (event) {
       event.preventDefault(); // Evitar el envío tradicional del formulario
 
@@ -134,6 +124,6 @@
             messageDiv.textContent = 'Ocurrió un error al intentar iniciar sesión.';
          });
    });
-</script>
+</script> -->
 
 </html>
