--- a/inventarios/staticfiles/templates/html/app/list-entradas.html
+++ b/inventarios/staticfiles/templates/html/app/list-entradas.html
@@ -78,7 +78,7 @@
                                 <b>Proveedor: </b>{{entrada.proveedor}}<br>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
 <!--                                 <button type="button" class="btn btn-primary">Save changes</button> -->
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                 <div class="modal-body-aviso" style="text-align: center;">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
